# DM_L1

./: .gitignore  CMakeLists.txt  README
include/: binary_multiset.hpp  binary_number.hpp  binary_set.hpp  def.hpp  input_processing_functions.hpp  universum.hpp
src/: binary_multiset.cpp  binary_number.cpp  binary_set.cpp  input_processing_functions.cpp  main.cpp  universum.cpp
